# lesta_project

./: .gitignore  CMakeLists.txt  README.md  conan_android_toolchain.cmake  conanfile.py  conanfile.txt
android-project/app/: build.gradle
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/assets/data/: config.json
android-project/app/src/main/assets/data/shaders/: vertex_shader_with_view.vert
android-project/app/src/main/java/org/home/alex/: PirateGame.java
android-project/app/src/main/res/values/: strings.xml
android-project/gradle/wrapper/: gradle-wrapper.properties
data/: config.json
data/shaders/: vertex_shader_without_view.vert
engine/: CMakeLists.txt
engine/data/: config.json  vertices.txt
engine/data/shaders/: fragment_shader.frag
engine/glad/include/glad/: glad.h
engine/glad/src/: glad.c
engine/include/: audio.hxx  buffer.hxx  engine.hxx  shader_program.hxx  sprite.hxx  structures.hxx  texture.hxx  view.hxx
engine/src/: buffer.cxx  engine.cxx  hot_reload_provider.cxx  hot_reload_provider.hxx  imgui_impl_opengl3.cxx  imgui_impl_opengl3.hxx  imgui_impl_sdl3.cxx  imgui_impl_sdl3.hxx  opengl_check.cxx  opengl_check.hxx  shader_program.cxx  sprite.cxx  stb_image.h  structures.cxx  texture.cxx  view.cxx
game/: CMakeLists.txt
game/src/: bottle.cxx  bottle.hxx  config.hxx  game.cxx  island.cxx  island.hxx  map.cxx  map.hxx  menu.cxx  menu.hxx  player.cxx  player.hxx  ship.cxx  ship.hxx  treasure.cxx  treasure.hxx
